# agent-trace

./: .gitignore  CONTRIBUTING.md  LEARNING.md  LICENSE  PLAN.md  README.md  README_zh.md  pyproject.toml
benchmarks/: run_all.py
examples/: demo_deadlock.py  seed_demo_data.py
src/agent_trace/: __init__.py  cli.py
src/agent_trace/detectors/: __init__.py  anomaly_detector.py  context_bloat.py  cycle_detector.py  deadlock_detector.py
src/agent_trace/otel/: __init__.py  attributes.py  emitter.py
src/agent_trace/storage/: __init__.py  base.py  sqlite_backend.py
src/agent_trace/web/: __init__.py  app.py
src/agent_trace/web/static/: index.html
tests/: test_anomaly_detector.py  test_cli.py  test_context_bloat.py  test_cycle_detector.py  test_deadlock_detector.py  test_otel.py  test_storage.py  test_web.py
